fix/NNO-12674 Добавлено поле model в '<menu-item>'